samples/_failures_safe/1761603896_860e30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17d91bad.c: In function ‘main’:
./samples/SAFE/__tmp_17d91bad.c:149:11: error: expected ‘;’ at end of input
  149 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_17d91bad.c:149:5: error: expected declaration or statement at end of input
  149 |     printf
      |     ^~~~~~
